--- a/code/demo/demo.html
+++ b/code/demo/demo.html
@@ -9,12 +9,12 @@
 	
   </head>
   <body>
-    <button id="btn" style="text-align: center">click</button>
+    <!-- <button id="btn" style="text-align: center">click</button> -->
 	<div class="txt"></div>
 	<div class="box">
-		<div class="item a"></div>
-		<div class="item b"></div>
-		<div class="item c"></div>
+		<div class="item a">image</div>
+		<div class="item b">list</div>
+		<div class="item c">text</div>
 	</div>
   </body>
   <script src="./demo.js">
