--- a/code/demo/demo.html
+++ b/code/demo/demo.html
@@ -9,14 +9,12 @@
 	
   </head>
   <body>
-    <!-- <button id="btn" style="text-align: center">click</button> -->
-	<div class="txt"></div>
 	<div class="box">
-		<div class="item a">image</div>
-		<div class="item b">list</div>
-		<div class="item c">text</div>
-		
+		<div class="child"></div>
+		<div class="child"></div>
+		<div class="child"></div>
 	</div>
+	
   </body>
   <script src="./demo.js">
 	
